[tool.poetry]
name = "englishprofile-scraper"
version = "1.0.0"
description = "GPLv3+"
authors = ["granitosaurus <bernardas.alisauskas@pm.me>"]
license = "GPLv3+"
packages = [
    { include = "englishprofilescraper.py" }
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"
parsel = "^1.6.0"
asyncclick = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
englishprofile-scraper = "englishprofilescraper:main"
